demo-fortune-configmap-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-fortune-configmap-volume-pod
  labels:
    # 配合之前创建的 demo-service 和 demo-ingress 使用，设置 hosts 后可直接通过 https://nodeservice.demo.com 访问
    app: k8s-node-demo-replication-controller-label
spec:
  containers:
  - image: fortune-input-demo-image:env
    imagePullPolicy: Never
    # 设置环境变量
    name: html-generator
    volumeMounts:
    - name: html
      mountPath: /var/htdocs
  - image: nginx:alpine
    imagePullPolicy: Never
    name: web-server
    volumeMounts:
    # 将配置文件放到 nginx 读取配置的文件夹中
    - name: config
      mountPath: /etc/nginx/conf.d
      readOnly: true
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - name: http
      containerPort: 80
      protocol: TCP
  volumes:
  - name: config
    # 指定 configMap
    configMap:
      name: fortune-config
      items:
      - key: my-nginx-config.conf
        path: wow.conf
  - name: html
    emptyDir: {}
