demo-fortune-secret-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-fortune-secret-volume-pod
spec:
  containers:
  - image: fortune-input-demo-image:env
    imagePullPolicy: Never
    name: html-generator
    volumeMounts:
    - name: html
      mountPath: /var/htdocs
  - image: nginx:alpine
    imagePullPolicy: Never
    name: web-server
    volumeMounts:
    - name: config
      mountPath: /etc/nginx/conf.d
      readOnly: true
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    # 绑定 secret 卷
    - name: certs
      mountPath: /etc/nginx/certs
      readOnly: true
    ports:
    - name: http
      containerPort: 80
      protocol: TCP
    - name: https
      containerPort: 443
      protocol: TCP
  volumes:
  - name: config
    configMap:
      name: fortune-config
      items:
      - key: my-nginx-config.conf
        path: wow.conf
  - name: html
    emptyDir: {}
  # 指定 Secret 资源挂载
  - name: certs
    secret:
      secretName: fortune-https
