demo-persistent-volume-claim-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-persistent-volume-claim-pod
spec:
  volumes:
  - name: mongodb-data
    persistentVolumeClaim:
      claimName: mongodb-pvc
  containers:
  - image: mongo
    imagePullPolicy: Never
    name: demo-persistent-volume-claim-pod-container
    volumeMounts:
    - name: mongodb-data
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
