demo-persistent-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-persistent-volume-pod
spec:
  volumes:
  - name: demo-persistent-volume-pod-mongodb-data
    hostPath:
      path: /tmp/demo-persistent-volume-pod-mongodb
  containers:
  - image: mongo
    imagePullPolicy: Never
    name: demo-persistent-volume-pod-container
    volumeMounts:
    - name: demo-persistent-volume-pod-mongodb-data
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
