demo-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-headless-service
spec:
  clusterIP: None
  selector:
    app: demo-headless-service-label
  ports:
  - name: http
    port: 80
    targetPort: http
