demo-hpa-deployment.yaml
# kubectl autoscale deployment demo-hpa-deployoment --cpu-percent=30 --min=1 --max=5
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-hpa-deployoment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-hpa-deployment-pod-label
  template:
    metadata:
      name: demo-hpa-deployment-pod
      labels:
        app: demo-hpa-deployment-pod-label
    spec:
      containers:
      - image: demo-rollupdate-image:v1
        imagePullPolicy: Never
        name: demo-hpa-deployment-pod-container
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: demo-hpa-deployment-service
spec:
  type: NodePort
  selector:
    app: demo-hpa-deployment-pod-label
  ports:
  - name: http
    port: 80
    # The Service "demo-deployment-service" is invalid: spec.ports[0].nodePort: Invalid value: 29980: provided port is not in the valid range. The range of valid ports is 30000-3276
    nodePort: 30480
    targetPort: http
