demo-readinesscheck-deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-readinesscheck-deloyment
spec:
  replicas: 3
  minReadySeconds: 10 # 设置延迟为 10 秒
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 # 确保升级过程中 pod 被挨个替换
    type: RollingUpdate
  selector:
    matchLabels:
      app: demo-readinesscheck-deloyment-pod-label
  template:
    metadata:
      name: demo-readinesscheck-deloyment-pod
      labels:
        app: demo-readinesscheck-deloyment-pod-label
    spec:
      containers:
      - image: demo-rollupdate-image:v1
        imagePullPolicy: Never
        name: demo-readinesscheck-deloyment-pod-container
        # 定义一个就绪探针
        readinessProbe:
          exec:
            command:
            - ls
            - /var/ready
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-readinesscheck-deloyment-service
spec:
  type: NodePort
  selector:
    app: demo-readinesscheck-deloyment-pod-label
  ports:
  - name: http
    port: 80
    # The Service "demo-deployment-service" is invalid: spec.ports[0].nodePort: Invalid value: 29980: provided port is not in the valid range. The range of valid ports is 30000-3276
    nodePort: 30380
    targetPort: http
