demo-rollupdate-rc-and-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-rollupdate-service
spec:
  type: NodePort
  selector:
    app: demo-rollupdate-rc
  ports:
  - name: http
    port: 80
    # The Service "demo-rollupdate-service" is invalid: spec.ports[0].nodePort: Invalid value: 29980: provided port is not in the valid range. The range of valid ports is 30000-3276
    nodePort: 30180
    targetPort: http
