demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  # 同一个 IP 的客户端发起的请求将会被转发到同一个 pod
  # sessionAffinity: ClientIP
  # type: NodePort
  type: LoadBalancer
  selector:
    app: k8s-node-demo-replication-controller-label
  ports:
  - name: http
    port: 80
    targetPort: http
    # nodePort: 30080
  - name: https
    port: 443
    targetPort: https
    # nodePort: 30443
