demo-statefulset-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-statefulset-headless-service
spec:
  clusterIP: None
  selector:
    app: demo-statefulset-pod-label
  ports:
  - name: http
    port: 80
