demo-statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-statefulset-service
spec:
  selector:
    app: demo-statefulset-pod-label
  ports:
  - name: http
    port: 80
    targetPort: 8080
