demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
spec:
  tls:
  - hosts:
    - nodeservice.demo.com
    secretName: demo-tls-secret
  rules:
  - host: nodeservice.demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-service
          servicePort: 80
